--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 ./lib/stable_fast-1.0.5+torch222cu121-cp310-cp310-manylinux2014_x86_64.whl
-edge_maxxing_4090_newdream-1.0.0-py3-none-any.whl
+torch==2.2.2 --index-url https://download.pytorch.org/whl/cu121
+torchvision==0.17.2 --index-url https://download.pytorch.org/whl/cu121
+accelerate==0.31.0
+numpy==1.26.4
 xformers==0.0.25.post1
+triton==2.2.0
+transformers==4.41.2
+diffusers>=0.19.3
 pyarmor
